en 分支：纯英文版（英文技能提升到根目录）
- 由 main 派生，移除中文根（11 卷中文技能/INDEX/.claude-plugin/中文 harness/中文 README/中文 meta 文档/_template）
- 把原 en/ 英文树提升到仓库根：00-meta…10-platform + INDEX + .claude-plugin(marketplace=everything-skills-en) + CLAUDE/AGENTS/GEMINI.md + gemini-extension.json + 英文 README
- scripts/build-index.mjs 改为英文根生成器（ROOT=仓库根，英文标签/放宽 level 校验/domain 中文前缀→英文显示）
- 1108 条英文技能，索引校验 0 错误 0 悬空互见 0 环
- README 注明：默认分支 main 为中文版，本 en 分支为英文版，互为一一镜像